--- a/src/css/App.module.css
+++ b/src/css/App.module.css
@@ -1,8 +1,8 @@
 .container {
-    width: 50rem;
-    height: 40rem;
-    background-color: #ffdaa3;
-    box-shadow: 0px 0px 50px 10px rgba(173,173,173,1);
+    width: 40vw;
+    height: 80vh;
+    background-color: #5e594f;
+    box-shadow: 0px 0px 50px 10px #5e594f;
     
     display: flex;
     flex-direction: column;
