--- a/src/css/App.module.css
+++ b/src/css/App.module.css
@@ -1,8 +1,8 @@
 .container {
     width: 40vw;
     height: 80vh;
-    background-color: #5e594f;
-    box-shadow: 0px 0px 50px 10px #5e594f;
+    /* background-color: #5e594f; */
+    /* box-shadow: 0px 0px 50px 10px #5e594f; */
     
     display: flex;
     flex-direction: column;
