--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -32,6 +32,7 @@
 }
 .form-check-input {
     margin-top: 0;
+    margin-right: 0.25rem;
     border: 3px solid #212631;
     background-color: transparent;
 }
