--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -30,6 +30,8 @@
     border: 0;
     background-color: transparent;
 
+    -moz-user-select:none;
+    -webkit-user-select:none;
     user-select: none;
 }
 .form-check-input {
